# gerardmartinezcanelles.github.io

./: 404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml
achievement/: index.html
cv/: index.html
docs/: achievement.md  cv.md  index.md  projects.md
projects/: index.html
site/: 404.html  index.html  sitemap.xml
site/achievement/: index.html
site/cv/: index.html
site/projects/: index.html
