[project]
name = "gerardmartinezcanelles-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-blog-plugin>=0.25",
    "mkdocs-material>=9.6.18",
    "mkdocs-material-extensions>=1.3.1",
]
